<resources>
    <string name="app_name">Uniboard</string>
    <string name="welcome">Welcome to</string>
    <string name="welcomeUniboard">Uniboard!</string>
    <string name="welcomDescription">Your go-to app for finding boarding places around your university.</string>
    <string name="getStart">Get Start</string>
    <string name="welcom02des">Discover the key</string>
    <string name="searshdes">Easily search for boarding places near your campus based on your preferences.</string>
    <string name="homedes">Explore detailed property listings with photos, amenities, and contact options.</string>
    <string name="messagedes">"Get all required contacts of Landlords for your communication purposes. "</string>
    <string name="bookmarkdes">Save your favorite boarding options for quick access later.</string>
    <string name="nextbtn">Next</string>
    <string name="keytopicrest">features of</string>
    <string name="des01">Ready to find your ideal boarding place?</string>
    <string name="answer">Register to UniBoard to start browsing available listings!</string>
    <string name="continuebtn">Continue</string>
    <string name="getstartedtopic">Let’s Get Started</string>
    <string name="subtilte">Dive in to the most convenient place for boarding exploration.</string>
    <string name="signuptitle">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="passwordhint">Password\n</string>
    <string name="reenterPWhint">Re-Enter Password</string>
    <string name="registerbtn">Register</string>
    <string name="loginlink">If you Already Have an Account. Log in</string>
    <string name="homebtn">Home</string>
    <string name="searchbtn">Explore</string>
    <string name="favouritebtn">Favorite</string>
    <string name="accountbtn">Account</string>
    <string name="homedescription">Welcome to UniBoard your go-to platform for finding the perfect place within your budget. With our intuitive interface, easily explore and compare options to discover the ideal living space tailored to your needs.</string>
    <string name="searchbarhint">.    Search</string>
    <string name="servisectitle">Services</string>
    <string name="room">Rooms</string>
    <string name="anexx">Anexxes</string>
    <string name="accounttitle">My Account</string>
    <string name="usersname">Jonathan Dureiraj</string>
    <string name="usersemail">jonathandureiraj@gmial.com</string>
    <string name="notification">Notifications</string>
    <string name="Advertisements">My Advertisements</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="exploretitle">Explore Boardings</string>
    <string name="trio">Triyo’s Annex</string>
    <string name="adderss">9 th Lane, Malabe</string>
    <string name="bedcard1">1</string>
    <string name="kichencard1">1</string>
    <string name="washroomcard1">1</string>
    <string name="pricecard1">Rs 40 000.00 per month</string>
    <string name="nushani">Nushani\'s Annex</string>
    <string name="bedcount">5</string>
    <string name="gotoexplore">Explore more boardings</string>
</resources>