<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".favoritespage">

    <TextView
        android:id="@+id/favoritecircle"
        android:layout_width="700dp"
        android:layout_height="700dp"
        android:layout_marginStart="-300dp"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="-300dp"
        android:background="@drawable/circle_pink_purple_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/homelayout"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Fhomeimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/home_white" />

            <TextView
                android:id="@+id/Fhomebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homebtn"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchlayout"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Fsearchimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/search_white" />

            <TextView
                android:id="@+id/Fsearchbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchbtn"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favoritelayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Ffavoriteimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/heart" />

            <TextView
                android:id="@+id/Ffavoritebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favouritebtn"
                android:textAlignment="center"
                android:textColor="@color/purplepink"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/accountlayout"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Faccountimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/user_white" />

            <TextView
                android:id="@+id/Faccountbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accountbtn"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="-250dp"
        android:layout_marginEnd="-250dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/circle_pink_purple_white"
        app:layout_constraintBottom_toTopOf="@+id/favoritecircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/favorites"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@color/offwhite"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites">

        <ImageView
            android:id="@+id/nanimageView4"
            android:layout_width="108dp"
            android:layout_height="130dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/anexxes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nanushani"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nushani"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nanaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adderss"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bedroom" />

                <TextView
                    android:id="@+id/bedcount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bedcount"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/kitchen" />

                <TextView
                    android:id="@+id/kichencount2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/kichencard1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bathtub" />

                <TextView
                    android:id="@+id/bedcount3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/washroomcard1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/nanprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pricecard1"
                android:textColor="@color/purplepink"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/favorittoexplore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/gotoexplore"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>