<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".accountpage">

    <TextView
        android:id="@+id/accountcircle"
        android:layout_width="800dp"
        android:layout_height="800dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/circle_pink_purple_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountcircle2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="564dp"
        android:background="@drawable/circle_pink_purple_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/homenav"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Ahomeimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/home_white" />

            <TextView
                android:id="@+id/Ahomebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homebtn"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchnav"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Asearchimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/search_white" />

            <TextView
                android:id="@+id/Asearchbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchbtn"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favoritenav"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Afavoriteimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/heart_white" />

            <TextView
                android:id="@+id/Afavoritebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favouritebtn"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/accountnav"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Aaccountiamge"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/Aaccountbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accountbtn"
                android:textAlignment="center"
                android:textColor="@color/purplepink"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/accounttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="16dp"
        android:text="@string/accounttitle"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usersimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/usersimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/usersname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accounttitle"
        app:srcCompat="@drawable/profilephoto" />

    <TextView
        android:id="@+id/usersname"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/usersname"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersimage" />

    <TextView
        android:id="@+id/usersemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersname" />

    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersemail">

        <LinearLayout
            android:id="@+id/noti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/notiimage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bell" />

            <TextView
                android:id="@+id/notification"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/notification"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addimage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/loudspeaker" />

            <TextView
                android:id="@+id/Advertisements"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/Advertisements"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favimage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grayheart" />

            <TextView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/favorites"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settingssss"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/settings"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoutimage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/logout" />

            <TextView
                android:id="@+id/logouts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/logout"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>